# dummy_trajectory

./: CMakeLists.txt  package.xml
src/: dummy_trajectory.cpp
